[fix] 비밀번호 visibility 수정

--- a/src/styles/scss/SignupNesting.scss
+++ b/src/styles/scss/SignupNesting.scss
@@ -83,7 +83,6 @@
 
     .agree-all-checkbox {
         margin-top: 60px;
-        margin-bottom: 13px;
         align-items: flex-start;
     }
 
@@ -104,5 +103,11 @@
     .signup-next-button {
         width: 100%;
         margin-top: 40px;
+    }
+
+    .diver {
+        margin: 16px 0;
+        @include border-color("line-medium");
+        border-bottom: none;
     }
 }
